unpackaged/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>