unpackaged/main/default/objects/Item__c/fields/Bluewave_Assignee__c.field-meta.xml
<CustomField>
        <fullName>Bluewave_Assignee__c</fullName>
        <label>Bluewave Assignee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bluewave_Assignee</valueSetName>
        </valueSet>
    </CustomField>