unpackaged/main/default/objects/Item__c/fields/Bluewave_Assignee_Email__c.field-meta.xml
<CustomField>
        <fullName>Bluewave_Assignee_Email__c</fullName>
        <inlineHelpText>Used for Email Notifications</inlineHelpText>
        <label>Bluewave Assignee Email</label>
        <type>Email</type>
    </CustomField>