unpackaged/main/default/objects/Item__c/fields/Dependency__c.field-meta.xml
<CustomField>
        <fullName>Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Child Items</relationshipLabel>
        <relationshipName>ChildItems</relationshipName>
        <type>Lookup</type>
    </CustomField>