unpackaged/main/default/objects/Item__c/fields/Estimated_Effort_Hours__c.field-meta.xml
<CustomField>
        <fullName>Estimated_Effort_Hours__c</fullName>
        <inlineHelpText>Number of hours estimated to complete this task.</inlineHelpText>
        <label>Estimated Effort (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>