unpackaged/main/default/objects/Item__c/fields/Internal_Owner__c.field-meta.xml
<CustomField>
        <fullName>Internal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </CustomField>