unpackaged/main/default/objects/Item__c/fields/Outcome__c.field-meta.xml
<CustomField>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>