unpackaged/main/default/objects/Item__c/fields/Phase__c.field-meta.xml
<CustomField>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <referenceTo>Phase__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>