unpackaged/main/default/objects/Item__c/fields/Project_Mailbox__c.field-meta.xml
<CustomField>
        <fullName>Project_Mailbox__c</fullName>
        <label>Project Mailbox</label>
        <type>Email</type>
    </CustomField>