unpackaged/main/default/objects/Item__c/fields/Salesforce_Record_Link__c.field-meta.xml
<CustomField>
        <fullName>Salesforce_Record_Link__c</fullName>
        <label>Salesforce Record Link</label>
        <type>Url</type>
    </CustomField>