unpackaged/main/default/objects/Item__c/fields/Subject__c.field-meta.xml
<CustomField>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>