unpackaged/main/default/objects/Item__c/validationRules/Bluewave_Assignee_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Bluewave_Assignee_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(TEXT(Bluewave_Assignee__c))),
ISBLANK(Bluewave_Assignee_Email__c)
)</errorConditionFormula>
    <errorDisplayField>Bluewave_Assignee_Email__c</errorDisplayField>
    <errorMessage>Please provide an email address for the Bluewave Assignee selected. This is required for notification purposes.</errorMessage>
</ValidationRule>