unpackaged/main/default/objects/Item__c/validationRules/Bluewave_Assignee_Required.validationRule-meta.xml
<ValidationRule>
        <fullName>Bluewave_Assignee_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, 'New')),
NOT(ISPICKVAL(Status__c, 'Closed')),
ISBLANK(TEXT(Bluewave_Assignee__c))
)</errorConditionFormula>
        <errorMessage>A Bluewave Assignee must be identified.</errorMessage>
    </ValidationRule>