unpackaged/main/default/objects/Item__c/listViews/Items_by_Status_Classification.listView-meta.xml
<ListView>
        <fullName>Items_by_Status_Classification</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Bluewave_Assignee__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Items by Classification (Kanban)</label>
    </ListView>